@@ -73,6 +73,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2724844 Add Fields: Add index is missing quotes
   thanks to Luke Armstrong
 - bug #2740550 [interface] Using textarea CharEditing drops default values
+- bug #2634827 [import] Using DELIMITER ends with infinite cycle 
 
 3.1.3.1 (2009-03-24)
 - [security] HTTP Response Splitting and file inclusion vulnerabilities 
